test/memory/shannon/memmaxExceeds.good
memmaxExceeds.chpl:10: error: Exceeded memory limit
