test/memory/shannon/memmaxExceeds.chpl
class C {
  var u: int;
  var v: int;
  var w: int;
  var x: int;
  var y: int;
  var z: int;
}

var c = new C();

writeln("Shouldn't get here if --memmax is less than 48");
